isprovidercontext